# cppDevelopmentFramework-win

./: CMakeLists.txt  CMakeSetup.json  readme.md
src/: main.cpp
src/sources/: version.cpp
